// Vitest Snapshot v1

exports[`New Adrs > should create a new one even if no config exists 1`] = `
"# 1. Example ADR

Date: 2022-06-22

## Status

Accepted

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;

exports[`New Adrs > should create a new one normally 1`] = `
"# 2. Example ADR

Date: 2022-06-22

## Status

Accepted

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
"
`;
